--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://epromo:$Dc86S7Vo@localhost:3306/task-manager"
+DATABASE_URL="mysql://epromo:\$Dc86S7Vo@localhost:3306/task-manager"
