--- a/package.json
+++ b/package.json
@@ -9,17 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.3.1",
+    "@radix-ui/themes": "^2.0.3",
     "@types/node": "20.10.6",
     "@types/react": "18.2.46",
     "@types/react-dom": "18.2.18",
     "autoprefixer": "10.4.16",
+    "classnames": "^2.3.2",
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
     "next": "14.0.4",
     "postcss": "8.4.32",
+    "prisma": "^5.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
     "tailwindcss": "3.4.0",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "zod": "^3.22.2"
   }
 }
