--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
     "@prisma/client": "^5.3.1",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^2.0.3",
     "@types/node": "20.10.6",
     "@types/react": "18.2.46",
@@ -29,6 +30,7 @@
     "react-hook-form": "^7.46.1",
     "react-icons": "^4.11.0",
     "react-simplemde-editor": "^5.2.0",
+    "react-tailwindcss-datepicker": "^1.6.6",
     "tailwindcss": "3.4.0",
     "typescript": "5.3.3",
     "zod": "^3.22.2"
