--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "postcss": "8.4.32",
     "prisma": "^5.3.1",
     "react": "18.2.0",
+    "react-datepicker": "^4.25.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
     "react-icons": "^4.11.0",
